fix(styles): Add vertical spacing to range input Adds `my-3` to range input for spacing and fixes duplicate webkit-slider-thumb.

--- a/src/global.css
+++ b/src/global.css
@@ -17,7 +17,7 @@
 
   input[type="range"] {
     -webkit-appearance: none;
-    @apply w-full h-[3px] rounded-sm outline-none appearance-none cursor-pointer relative;
+    @apply w-full h-[3px] rounded-sm outline-none appearance-none cursor-pointer relative my-3;
     background-color: var(--color-slider-bg);
     background-image: linear-gradient(
       var(--color-primary),
@@ -25,10 +25,10 @@
     );
     background-repeat: no-repeat;
     background-size: var(--range-progress, 0%) 100%;
-    background-position: 4px center;
-    margin-top: 16px;
-    margin-bottom: 16px;
   }
+
+  input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
 
   input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
